--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="turtleFacts">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>Turtle Facts and Quiz</title>
 		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.6-dist/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/controllers/list.js"></script>
 	</head>
-	<body ng-app="turtleFacts">
+	<body>
 		<!-- Page Container Starts here -->
 		<div class="container">
 			<div class="page-header">
@@ -16,19 +19,65 @@
 				<strong>TURTLE QUIZ</strong>
 				</h3>
 			</div>
-			<div ng-controller="listCtrl">
-				{{dummyData}}
+			<div ng-controller="listCtrl as list">
+				<div class="row">
+					<div class="col-sm-6" ng-repeat="turtle in list.data">
+						<div class="well well-sm">
+							<div class="row">
+								<div class="col-md-6">
+									<img ng-src="{{turtle.image_url}}" 
+									class="img-responsive img-responsive well-image">
+								</div>
+								<div class="col-md-6">
+									<h4>{{turtle.type}}</h4>
+									<p><strong>Locations: </strong>{{turtle.locations}}</p>
+									<p><strong>Size:</strong>{{turtle.size}}</p>
+									<p><strong>Average LifeSpan: </strong>{{turtle.livespan}}</p>
+									<p><strong>Diet: </strong>{{turtle.diet}}</p>
+									<button class="btn btn-primary pull-right"
+									data-toggle="modal" data-target="#target-info"
+									ng-click="list.changeActiveTurtle(turtle)">Learn More</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Modal Creation -->
+				<div class="modal" id="target-info">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h2>{{list.activeTurtle.type}}</h2>
+							</div>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-xs-8 col-xs-offset-2">
+										<img ng-src={{list.activeTurtle.image_url}} class="img-rounded img-responsive">
+									</div>
+								</div>
+								<div class="row top-buffer">
+									<div class="col-md-6">
+										<p><strong>Locations: </strong>{{list.activeTurtle.locations}}</p>
+										<p><strong>Size:</strong>{{list.activeTurtle.size}}</p>
+										<p><strong>Average LifeSpan: </strong>{{list.activeTurtle.lifespan}}</p>
+										<p><strong>Diet: </strong>{{list.activeTurtle.diet}}</p>
+									</div>
+									<div class="col-xs-12 top-buffer">
+										<p>{{list.activeTurtle.description}}</p>
+										<button class="btn btn-danger pull-right" 
+										data-dismiss="modal">Close</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		
 		<!-- Third Party Javascripts -->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="bootstrap-3.3.6-dist/js/bootstrap.js"></script>
-
-		<!-- Application Scripts -- >
-		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/controllers/list.js"></script>
 	</body>
 </html>
