--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 				<strong>TURTLE QUIZ</strong>
 				</h3>
 			</div>
-			<div ng-controller="listCtrl as list">
+			<div ng-controller="listCtrl as list" ng-hide="list.quizActive">
 				<form class="form-inline well well-sm clearfix">
 					<span class="glyphicon glyphicon-search"></span>
 					<input type="text" name="search" placeholder="Search..." class="form-control"
 					ng-model="list.search">
+					<button class="btn btn-warning pull-right" ng-click="list.activateQuiz()">
+						<strong>Start Quiz</strong>
+					</button>
 				</form>
 				<div class="row">
 					<div class="col-sm-6" ng-repeat="turtle in list.data | filter:list.search">
