--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/list.js"></script>
+		<script type="text/javascript" src="js/controllers/quiz.js"></script>
+		<script type="text/javascript" src="js/factories/quizMetrics.js"></script>
 	</head>
 	<body>
 		<!-- Page Container Starts here -->
@@ -19,7 +21,7 @@
 				<strong>TURTLE QUIZ</strong>
 				</h3>
 			</div>
-			<div ng-controller="listCtrl as list" ng-hide="list.quizActive">
+			<div ng-controller="listCtrl as list" ng-hide="list.quizMetrics.quizActive">
 				<form class="form-inline well well-sm clearfix">
 					<span class="glyphicon glyphicon-search"></span>
 					<input type="text" name="search" placeholder="Search..." class="form-control"
@@ -80,6 +82,10 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<!-- Quiz Controller -->
+			<div ng-controller="quizCtrl as quiz" ng-show="quiz.quizMetrics.quizActive">
+				<h3>welcome to Quiz World</h3>
 			</div>
 		</div>
 
