--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="js/controllers/list.js"></script>
 		<script type="text/javascript" src="js/controllers/quiz.js"></script>
 		<script type="text/javascript" src="js/factories/quizMetrics.js"></script>
+		<script type="text/javascript" src="js/factories/dataService.js"></script>
 	</head>
 	<body>
 		<!-- Page Container Starts here -->
